--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && NPM_CONFIG_PRODUCTION=false npm install && npm run build"
+    "heroku-postbuild": "NPM_ CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Lawrence",
   "license": "MIT",
